--- a/EditorsProvider/EditorsProvider.csproj
+++ b/EditorsProvider/EditorsProvider.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -9,8 +9,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
-    <ProjectReference Include="..\EditorsProvider\EditorsProvider.csproj" />
-    <ProjectReference Include="..\StorageProvider\StorageProvider.csproj" />
   </ItemGroup>
 
 </Project>
