--- a/DocumentManager/DocumentManager.csproj
+++ b/DocumentManager/DocumentManager.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
-    <ProjectReference Include="..\EditorsProvider\EditorsProvider.csproj" />
+    <ProjectReference Include="..\EditorsProvider\EditorProvider.csproj" />
     <ProjectReference Include="..\StorageProvider\StorageProvider.csproj" />
   </ItemGroup>
 
