--- a/DocumentManager/DocumentManager.csproj
+++ b/DocumentManager/DocumentManager.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\EditorsProvider\EditorProvider.csproj" />
     <ProjectReference Include="..\StorageProvider\StorageProvider.csproj" />
